# dev_cpp_lab

./: CMakeLists.txt  Doxyfile  readme.md
include/: Base.hpp  TempFun.hpp
source/: Base.cpp  TempFun.cpp  main.cpp
test/: BaseTest.cpp  CMakeLists.txt  TempFunTest.cpp
